# mshard

./: LICENSE  README.md  pyproject.toml
src/mshard/: mshard  version.py
test/: .gitignore
