[build-system]
requires = ["setuptools>=63.2", "pymongo==3.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mshard"
version = "0.0.1"
authors = [
  { name="Lungang Fang", email="lungang.fang@gmail.com" },
]
description = "Yet Another MongoDB Sharding Analyser"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Appache License 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lgfang/mshard"
"Bug Tracker" = "https://github.com/lgfang/mshard/issue"
